2004-11-03  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Added transformations for DC, AC and
	transient analysis.

2004-11-02  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed unit conversion routine and added
	voltage source transformations.

2004-10-31  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Implemented node, property and unit
	transformations.

2004-10-29  Stefan Jahn  <stefan@lkcc.org>

	* qucsconv.cpp: Started to implement a netlist conversion
	program.